--- a/research/data-ingestion.ipynb
+++ b/research/data-ingestion.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "2d38d6aa",
    "metadata": {},
    "outputs": [],
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "420f7f46",
    "metadata": {},
    "outputs": [
@@ -43,7 +43,7 @@
        "'/home/zezo/Desktop/Data-science-project'"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -63,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "7fefd551",
    "metadata": {},
    "outputs": [],
@@ -81,54 +81,59 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "id": "751429bd",
    "metadata": {},
    "outputs": [],
    "source": [
     "from src.datascience.constants import *\n",
-    "from src.datascience.utils.common import read_ymal,create_directories"
+    "from src.datascience.utils.common import read_yaml,create_directories"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": null,
+   "id": "59a4d8bf",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
    "id": "9a9c9b35",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# ...existing code...\n",
     "class ConfigurationManager:\n",
-    "    def __init__(self, config_filepath=CONFIG_FILE_PATH,\n",
-    "                 params_filepath=PARAMS_FILE_PATH,\n",
-    "                 sechema_filepath=SCHEMA_FILE_PATH):\n",
+    "    def __init__(self,\n",
+    "                 config_filepath=CONFIG_FILE_PATH,\n",
+    "                 params_filepath = PARAMS_FILE_PATH,\n",
+    "                 schema_filepath = SCHEMA_FILE_PATH):\n",
+    "        self.config=read_yaml(config_filepath)\n",
+    "        self.params=read_yaml(params_filepath)\n",
+    "        self.schema=read_yaml(schema_filepath)\n",
     "\n",
-    "        self.config = read_ymal(config_filepath)\n",
-    "        self.params = read_ymal(params_filepath)\n",
-    "        self.schema = read_ymal(sechema_filepath)\n",
+    "        create_directories([self.config.artifacts_root])\n",
     "\n",
-    "        create_directories([self.config['artifacts_root']], verbose=True)\n",
     "\n",
-    "    def get_data_ingestion_config(self) -> DataIngestionConfig:\n",
+    "    def get_data_ingestion_config(self)-> DataIngestionConfig:\n",
+    "        config=self.config.data_ingestion\n",
+    "        create_directories([config.root_dir])\n",
     "\n",
-    "        config = self.config['data_ingestion']\n",
+    "        data_ingestion_config=DataIngestionConfig(\n",
+    "            root_dir=config.root_dir,\n",
+    "            source_url=config.source_URL,\n",
+    "            local_data_file=config.local_data_file,\n",
+    "            unzip_dir=config.unzip_dir\n",
     "\n",
-    "        create_directories([config['root_dir']], verbose=True)\n",
-    "\n",
-    "        data_ingestion_config = DataIngestionConfig(\n",
-    "            root_dir=config['root_dir'],\n",
-    "            source_url=config['source_url'],\n",
-    "            local_data_file=config['local_data_file'],\n",
-    "            unzip_dir=config['unzip_dir']\n",
     "        )\n",
-    "\n",
-    "        return data_ingestion_config\n",
-    "# ...existing code..."
+    "        return data_ingestion_config"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 30,
    "id": "83699344",
    "metadata": {},
    "outputs": [],
@@ -136,21 +141,22 @@
     "import urllib.request as request\n",
     "from src.datascience import logger\n",
     "import zipfile\n",
+    "## component-Data Ingestion\n",
+    "\n",
     "class DataIngestion:\n",
     "    def __init__(self,config:DataIngestionConfig):\n",
-    "        self.config = config\n",
-    "\n",
-    "\n",
-    "    def downlaod_file(self):\n",
+    "        self.config=config\n",
+    "    \n",
+    "    # Downloading the zip file\n",
+    "    def download_file(self):\n",
     "        if not os.path.exists(self.config.local_data_file):\n",
-    "            filename,headers = request.urlretrieve(\n",
-    "                url=self.config.source_url,\n",
-    "                filename=self.config.local_data_file\n",
+    "            filename, headers = request.urlretrieve(\n",
+    "                url = self.config.source_url,\n",
+    "                filename = self.config.local_data_file\n",
     "            )\n",
-    "            logger.info(f\"File downloaded {filename} with info: {headers}\")\n",
+    "            logger.info(f\"{filename} download! with following info: \\n{headers}\")\n",
     "        else:\n",
-    "            logger.info(f\"File already exists of size\")\n",
-    "\n",
+    "            logger.info(f\"File already exists\")\n",
     "\n",
     "    def extract_zip_file(self):\n",
     "        \"\"\"\n",
@@ -161,12 +167,12 @@
     "        unzip_path = self.config.unzip_dir\n",
     "        os.makedirs(unzip_path, exist_ok=True)\n",
     "        with zipfile.ZipFile(self.config.local_data_file, 'r') as zip_ref:\n",
-    "            zip_ref.extractall(unzip_path)"
+    "            zip_ref.extractall(unzip_path)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 32,
    "id": "c1e5939d",
    "metadata": {},
    "outputs": [
@@ -174,23 +180,38 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[ 2025-07-09 14:32:52,994 : INFO : common : Yaml file:config/config.yaml loaded successfully. ]\n",
-      "[ 2025-07-09 14:32:52,995 : INFO : common : Yaml file:params.yaml loaded successfully. ]\n",
-      "[ 2025-07-09 14:32:52,996 : INFO : common : Yaml file:schema.yaml loaded successfully. ]\n"
-     ]
-    },
-    {
-     "ename": "TypeError",
-     "evalue": "isinstance() arg 2 must be a type, a tuple of types, or a union",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
-      "\u001b[31mTypeError\u001b[39m                                 Traceback (most recent call last)",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[38]\u001b[39m\u001b[32m, line 8\u001b[39m\n\u001b[32m      6\u001b[39m     data_ingestion.extract_zip_file()\n\u001b[32m      7\u001b[39m \u001b[38;5;28;01mexcept\u001b[39;00m \u001b[38;5;167;01mException\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m e:\n\u001b[32m----> \u001b[39m\u001b[32m8\u001b[39m     \u001b[38;5;28;01mraise\u001b[39;00m e\n",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[38]\u001b[39m\u001b[32m, line 2\u001b[39m\n\u001b[32m      1\u001b[39m \u001b[38;5;28;01mtry\u001b[39;00m:\n\u001b[32m----> \u001b[39m\u001b[32m2\u001b[39m     config=\u001b[43mConfigurationManager\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m      3\u001b[39m     data_ingestion_config=config.get_data_ingestion_config()\n\u001b[32m      4\u001b[39m     data_ingestion = DataIngestion(config=data_ingestion_config)\n",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[36]\u001b[39m\u001b[32m, line 11\u001b[39m, in \u001b[36mConfigurationManager.__init__\u001b[39m\u001b[34m(self, config_filepath, params_filepath, sechema_filepath)\u001b[39m\n\u001b[32m      8\u001b[39m \u001b[38;5;28mself\u001b[39m.params = read_ymal(params_filepath)\n\u001b[32m      9\u001b[39m \u001b[38;5;28mself\u001b[39m.schema = read_ymal(sechema_filepath)\n\u001b[32m---> \u001b[39m\u001b[32m11\u001b[39m \u001b[43mcreate_directories\u001b[49m\u001b[43m(\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[43m.\u001b[49m\u001b[43mconfig\u001b[49m\u001b[43m[\u001b[49m\u001b[33;43m'\u001b[39;49m\u001b[33;43martifacts_root\u001b[39;49m\u001b[33;43m'\u001b[39;49m\u001b[43m]\u001b[49m\u001b[43m]\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mverbose\u001b[49m\u001b[43m=\u001b[49m\u001b[38;5;28;43;01mTrue\u001b[39;49;00m\u001b[43m)\u001b[49m\n",
-      "\u001b[36mFile \u001b[39m\u001b[32m~/Desktop/Data-science-project/venv/lib/python3.12/site-packages/ensure/main.py:831\u001b[39m, in \u001b[36mWrappedFunction.__call__\u001b[39m\u001b[34m(self, *args, **kwargs)\u001b[39m\n\u001b[32m    828\u001b[39m \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[32m    829\u001b[39m     \u001b[38;5;28;01mcontinue\u001b[39;00m\n\u001b[32m--> \u001b[39m\u001b[32m831\u001b[39m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m \u001b[38;5;28;43misinstance\u001b[39;49m\u001b[43m(\u001b[49m\u001b[43mvalue\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mtempl\u001b[49m\u001b[43m)\u001b[49m:\n\u001b[32m    832\u001b[39m     msg = \u001b[33m\"\u001b[39m\u001b[33mArgument \u001b[39m\u001b[38;5;132;01m{arg}\u001b[39;00m\u001b[33m of type \u001b[39m\u001b[38;5;132;01m{valt}\u001b[39;00m\u001b[33m to \u001b[39m\u001b[38;5;132;01m{f}\u001b[39;00m\u001b[33m \u001b[39m\u001b[33m\"\u001b[39m \u001b[33m\"\u001b[39m\u001b[33mdoes not match annotation type \u001b[39m\u001b[38;5;132;01m{t}\u001b[39;00m\u001b[33m\"\u001b[39m\n\u001b[32m    833\u001b[39m     \u001b[38;5;28;01mraise\u001b[39;00m EnsureError(msg.format(arg=arg, f=\u001b[38;5;28mself\u001b[39m.f, t=templ, valt=\u001b[38;5;28mtype\u001b[39m(value)))\n",
-      "\u001b[31mTypeError\u001b[39m: isinstance() arg 2 must be a type, a tuple of types, or a union"
+      "[ 2025-07-09 15:14:34,957 : INFO : common : yaml file: config/config.yaml loaded successfully ]\n",
+      "[ 2025-07-09 15:14:34,958 : INFO : common : yaml file: params.yaml loaded successfully ]\n",
+      "[ 2025-07-09 15:14:34,958 : INFO : common : yaml file: schema.yaml loaded successfully ]\n",
+      "[ 2025-07-09 15:14:34,958 : INFO : common : created directory at: artifacts ]\n",
+      "[ 2025-07-09 15:14:34,959 : INFO : common : created directory at: artifacts/data_ingestion ]\n",
+      "[ 2025-07-09 15:14:36,228 : INFO : 2820843985 : artifacts/data_ingestion/data.zip download! with following info: \n",
+      "Connection: close\n",
+      "Content-Length: 23329\n",
+      "Cache-Control: max-age=300\n",
+      "Content-Security-Policy: default-src 'none'; style-src 'unsafe-inline'; sandbox\n",
+      "Content-Type: application/zip\n",
+      "ETag: \"c69888a4ae59bc5a893392785a938ccd4937981c06ba8a9d6a21aa52b4ab5b6e\"\n",
+      "Strict-Transport-Security: max-age=31536000\n",
+      "X-Content-Type-Options: nosniff\n",
+      "X-Frame-Options: deny\n",
+      "X-XSS-Protection: 1; mode=block\n",
+      "X-GitHub-Request-Id: 647A:5E639:FFAFE:21BEAC:686E3A03\n",
+      "Accept-Ranges: bytes\n",
+      "Date: Wed, 09 Jul 2025 09:44:36 GMT\n",
+      "Via: 1.1 varnish\n",
+      "X-Served-By: cache-bom4745-BOM\n",
+      "X-Cache: MISS\n",
+      "X-Cache-Hits: 0\n",
+      "X-Timer: S1752054276.785306,VS0,VE364\n",
+      "Vary: Authorization,Accept-Encoding\n",
+      "Access-Control-Allow-Origin: *\n",
+      "Cross-Origin-Resource-Policy: cross-origin\n",
+      "X-Fastly-Request-ID: bfd46ed7669d32d7a590dffb10c2e67f5935d8de\n",
+      "Expires: Wed, 09 Jul 2025 09:49:36 GMT\n",
+      "Source-Age: 0\n",
+      "\n",
+      " ]\n"
      ]
     }
    ],
@@ -199,7 +220,8 @@
     "    config=ConfigurationManager()\n",
     "    data_ingestion_config=config.get_data_ingestion_config()\n",
     "    data_ingestion = DataIngestion(config=data_ingestion_config)\n",
-    "    data_ingestion.downlaod_file()\n",
+    "    data_ingestion.download_file()\n",
+    "    \n",
     "    data_ingestion.extract_zip_file()\n",
     "except Exception as e:\n",
     "    raise e\n",
@@ -210,6 +232,14 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "1b06a0f1",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "137b92ac",
    "metadata": {},
    "outputs": [],
    "source": []
